# mw-scsp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PROJECT_SPEC.md  README.md  RESEARCH_PROMPTS.md  TASK_LEDGER.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
_content/docs/: getting-started.md  index.md
_context/agent-output/: README.md  ra1-pla-doctrine.md  ra10-presentation-script-drafts.md  ra2-jp-3-0-5-0.md  ra3-pla-off-dist-corpus.md  ra4-me-cascade-corpus.md  ra5-yuna-wong-register.md  ra6-cross-family-api.md  ra7-chroma-rag.md  ra8-multi-agent-frameworks.md  ra9-plan-blue-curator-and-presentation.md
_context/ll/: brenner-et-al-2020-partners-in-student-centered-learning.md  kuzmick-et-al-learning-lab-experiment.md  learning-lab-pitch-2017.md  learning-lab-story-2021.md
apps/interface/: mdx-components.tsx  next.config.ts  package.json
data/personas/: SCHEMA.md
demo/: audit_excerpt.db
demo/4dae48d3-4126-4baa-b23a-58ecbfd0a40d/: branch_curation.json  candidates.json  convergence.json  convergence.md  judgments.json  manifest.json  menu.json  menu.md  modal_moves.json
scenarios/: israel_me_cascade_2026.yaml  taiwan_strait_spring_2028.yaml
src/: __init__.py
src/agents/: _prompt.py  base.py  blue_curator.py  convergence_cartographer.py  judge_pool.py  off_distribution_generator.py  (+1 more)
tests/: test_blue_curator.py  test_doctrine_index.py  test_logged_completion.py  test_memory_agents.py  test_memory_retrieval.py  test_personas.py  test_pipeline_dry_run.py
worktree-prompts/: README.md  doctrine.md  memory.md  pipeline.md  ui.md
(+121 files in other folders)
